# OmegaHandleGenerator

./: CMakeLists.txt  Kconfig  idf_component.yml
examples/generateHandles/: CMakeLists.txt  sdkconfig  sdkconfig.old
examples/generateHandles/main/: CMakeLists.txt  main.c
inc/: OmegaHandleGenerator.h
src/: OmegaHandleGenerator.c
